--- a/Wind_Get_Data.ipynb
+++ b/Wind_Get_Data.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## 通过密码生成验证码\n",
     "import hashlib\n",
-    "password = \"xzh486520\";\n",
+    "password = \"XXXXXXX\";\n",
     "m=hashlib.md5()\n",
     "b=password.encode(encoding='UTF-8')\n",
     "m.update(b)\n",
