--- a/Wind_Get_Data.ipynb
+++ b/Wind_Get_Data.ipynb
@@ -50,7 +50,7 @@
     "import requests\n",
     "#token取得\n",
     "#请务必注意：不要每次调用接口都重新取得token，太多调用会被认为账户异常，最终影响wft账户的正常使用\n",
-    "tokenResponse = requests.get(\"http://eapi.wind.com.cn/wind.ent.risk/openapi/getToken?windUser=18702198017&verifyCode=\"+requests.utils.quote(verifyCode))\n",
+    "tokenResponse = requests.get(\"http://eapi.wind.com.cn/wind.ent.risk/openapi/getToken?windUser=XXXXXXXXXX&verifyCode=\"+requests.utils.quote(verifyCode))\n",
     "import json\n",
     "jsonToken = json.loads(tokenResponse.text)\n",
     "token = \"\"\n",
